fixed the picture order and centered the work on small screens.

--- a/style.css
+++ b/style.css
@@ -163,9 +163,28 @@ span img {
     height: auto;
 }
 
+.email-link:hover {
+    text-decoration: none;
+}
+
 /* media queries */
 
 @media (max-width: 600px) {
+    main {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        text-align: center; /* This will center text-based content */
+    }
+
+    main > * {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
     header h1 {
         font-size: 4rem;
         margin-bottom: 15rem;
@@ -175,4 +194,6 @@ span img {
         width: 3.25rem;
         height: 3.25rem;
     }
+
+
 }
